--- a/config/mosquitto/mosquitto.conf
+++ b/config/mosquitto/mosquitto.conf
@@ -1,8 +1,12 @@
 persistence true
 persistence_location /mosquitto/data/
 log_dest file /mosquitto/log/mosquitto.log
+log_dest stdout
 listener 1883
 
 ## Authentication ##
-allow_anonymous false
+## To change password
+## docker-compose exec mosquitto mosquitto_passwd -b /mosquitto/config/password.txt user password
+## default admin admin
+allow_anonymous true
 password_file /mosquitto/config/password.txt
