--- a/.env
+++ b/.env
@@ -1,6 +1,13 @@
 INFLUXDB_USERNAME=admin
 INFLUXDB_PASSWORD=admin
-INFLUXDB_DB_NAME=db0
+INFLUXDB_DB_NAME=lomo
 
 GRAFANA_USERNAME=admin
 GRAFANA_PASSWORD=admin
+
+MONGO_USERNAME=admin
+MONGO_PASSWORD=admin
+MONGO_DB_NAME=lomo
+
+EXPRESS_USERNAME=dev
+EXPRESS_PASSWORD=dev
