--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
         restart: always
         
     chronograf:
-        image: chronograf:1.9-alpine
+        image: chronograf:1.9.4
         ports:
             - '127.0.0.1:8888:8888'
         volumes:
