--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,17 +88,17 @@ services:
             - internal
         depends_on:
             - mongo
-            
-    https_proxy:
-        image: 'jc21/nginx-proxy-manager:latest'
-        restart: unless-stopped
-        ports:
-        - '80:80'
-        - '81:81'
-        - '443:443'
-        volumes:
-        - ./data:/data
-        - ./letsencrypt:/etc/letsencrypt
+
+    # https_proxy:
+    #     image: 'jc21/nginx-proxy-manager:latest'
+    #     restart: unless-stopped
+    #     ports:
+    #     - '80:80'
+    #     - '81:81'
+    #     - '443:443'
+    #     volumes:
+    #     - ./data:/data
+    #     - ./letsencrypt:/etc/letsencrypt
 
 volumes:
     influxdb-storage:
