--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
             - INFLUXDB_DB=${INFLUXDB_DB_NAME}
             - INFLUXDB_ADMIN_USER=${INFLUXDB_USERNAME}
             - INFLUXDB_ADMIN_PASSWORD=${INFLUXDB_PASSWORD}
+            - INFLUXDB_HTTP_FLUX_ENABLED=true
         restart: always
         
     chronograf:
