--- a/config/mosquitto/mosquitto.conf
+++ b/config/mosquitto/mosquitto.conf
@@ -8,5 +8,6 @@ listener 1883
 ## To change password
 ## docker-compose exec mosquitto mosquitto_passwd -b /mosquitto/config/password.txt user password
 ## default admin admin
-allow_anonymous true
+allow_anonymous false
 password_file /mosquitto/config/password.txt
+acl_file /mosquitto/config/mosquitto.acl
