Add dynamic mosquitto config

--- a/config/mosquitto/mosquitto.conf
+++ b/config/mosquitto/mosquitto.conf
@@ -9,5 +9,8 @@ listener 1883
 ## docker-compose exec mosquitto mosquitto_passwd -b /mosquitto/config/password.txt user password
 ## default admin admin
 allow_anonymous false
-password_file /mosquitto/config/password.txt
-acl_file /mosquitto/config/mosquitto.acl
+#password_file /mosquitto/config/password.txt
+#acl_file /mosquitto/config/mosquitto.acl
+
+plugin /usr/lib/mosquitto_dynamic_security.so
+plugin_opt_config_file /mosquitto/config/dynamic-security.json
