--- a/src/dashboard_server/package.json
+++ b/src/dashboard_server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "prod": "copyfiles -u 3 ../dashboard/dist/* ../dashboard/dist/*/* ./public/ && nodemon ./src/server.js",
     "dev": "nodemon ./src/server.js",
@@ -17,6 +18,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.6",
+    "mqtt": "^4.3.7",
     "path": "^0.12.7"
   },
   "devDependencies": {
