--- a/src/lomo_device/platformio.ini
+++ b/src/lomo_device/platformio.ini
@@ -12,3 +12,9 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+
+lib_deps =
+    https://github.com/adafruit/DHT-sensor-library#1.4.4
+    https://github.com/adafruit/Adafruit_Sensor#1.1.5
+    https://github.com/knolleary/pubsubclient#v2.8
+    https://github.com/bblanchon/ArduinoJson#v6.19.4
