--- a/src/lomo_device/platformio.ini
+++ b/src/lomo_device/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+monitor_speed = 115200
 
 lib_deps =
     https://github.com/adafruit/DHT-sensor-library#1.4.4
