Update influx version

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 INFLUXDB_USERNAME=admin
-INFLUXDB_PASSWORD=admin
-INFLUXDB_DB_NAME=lomo
+INFLUXDB_PASSWORD=adminadmin
+INFLUXDB_BUCKET=lomo
+INFLUXDB_ORG=lomo
+INFLUXDB_ADMIN_TOKEN=adminadminadmin
 
 GRAFANA_USERNAME=admin
 GRAFANA_PASSWORD=admin
