--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
         restart: always
 
     influxdb:
-        image: influxdb:1.8.10
+        image: influxdb:2.3.0
         ports:
             - '8086:8086'
         volumes:
@@ -23,24 +23,12 @@ services:
         networks:
             - internal
         environment:
-            - INFLUXDB_DB=${INFLUXDB_DB_NAME}
-            - INFLUXDB_ADMIN_USER=${INFLUXDB_USERNAME}
-            - INFLUXDB_ADMIN_PASSWORD=${INFLUXDB_PASSWORD}
-            - INFLUXDB_HTTP_FLUX_ENABLED=true
-        restart: always
-        
-    chronograf:
-        image: chronograf:1.9.4
-        ports:
-            - '127.0.0.1:8888:8888'
-        volumes:
-            - chronograf-storage:/var/lib/chronograf
-        networks:
-            - internal
-        environment:
-            - INFLUXDB_URL=http://influxdb:8086
-            - INFLUXDB_USERNAME=${INFLUXDB_USERNAME}
-            - INFLUXDB_PASSWORD=${INFLUXDB_PASSWORD}
+            - DOCKER_INFLUXDB_INIT_MODE=setup
+            - DOCKER_INFLUXDB_INIT_ORG=${INFLUXDB_ORG}
+            - DOCKER_INFLUXDB_INIT_BUCKET=${INFLUXDB_BUCKET}
+            - DOCKER_INFLUXDB_INIT_USERNAME=${INFLUXDB_USERNAME}
+            - DOCKER_INFLUXDB_INIT_PASSWORD=${INFLUXDB_PASSWORD}
+            - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=${INFLUXDB_ADMIN_TOKEN}
         restart: always
 
     grafana:
