--- a/src/lomo_device/.vscode/settings.json
+++ b/src/lomo_device/.vscode/settings.json
@@ -47,6 +47,8 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "cinttypes": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "list": "cpp",
+        "iostream": "cpp"
     }
 }
