--- a/src/dashboard_server/package.json
+++ b/src/dashboard_server/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.18.1",
