--- a/.env
+++ b/.env
@@ -7,6 +7,9 @@ INFLUXDB_ADMIN_TOKEN=adminadminadmin
 GRAFANA_USERNAME=admin
 GRAFANA_PASSWORD=admin
 
+MOSQUITTO_USERNAME=admin
+MOSQUITTO_PASSWORD=admin
+
 MONGO_USERNAME=admin
 MONGO_PASSWORD=admin
 MONGO_DB_NAME=lomo
