--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,7 +52,8 @@ services:
             - GF_SECURITY_ADMIN_USER=${GRAFANA_USERNAME}
             - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_PASSWORD}
             - GF_AUTH_ANONYMOUS_ENABLED=true
-
+            - GF_SECURITY_ALLOW_EMBEDDING=true
+            - GF_SECURITY_COOKIE_SAMESITE
         healthcheck:
             test: ["CMD", "curl", "-f", "http://localhost:3000/api/health"]
             interval: 30s
