--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -214,16 +214,13 @@ services:
             - mongo
             - influxdb
             
-    # https_proxy:
-    #     image: 'jc21/nginx-proxy-manager:latest'
-    #     restart: unless-stopped
-    #     ports:
-    #     - '80:80'
-    #     - '81:81'
-    #     - '443:443'
-    #     volumes:
-    #     - ./data:/data
-    #     - ./letsencrypt:/etc/letsencrypt
+    https_proxy:
+        image: 'jc21/nginx-proxy-manager:latest'
+        restart: unless-stopped
+        ports:
+        - '80:80'
+        - '81:81'
+        - '443:443'
 
 volumes:
     influxdb-storage:
