--- a/.env
+++ b/.env
@@ -17,5 +17,5 @@ MONGO_DB_NAME=lomo
 EXPRESS_USERNAME=dev
 EXPRESS_PASSWORD=dev
 
-WEATHER_API_KERY=1a54275094149e4130482552b99809a4
-TELEGRAM_API_KEY=5416910212:AAGGXpTPs4JTHehgJseuB3WdSa2fXeSeDqs
+WEATHER_API_KERY=
+TELEGRAM_API_KEY=
